Add: ads section in progress

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         </div>
     </main>
     <section class="section ads">
-        <h1>Casas y Depas en Venta</h1>
+        <h2>Casas y Depas en Venta</h2>
         <div class="ads-container">
             <div class="ad-content">
                 <img src="src/img/anuncio1.jpg" alt="House 1">
                 <div class="ad-info">
-                    <h3>Casa en la Playa</h3>
+                    <h3>Casa de Lujo en el Lago</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p class="price"> $500,000</p>
+                    <p class="price"> $500,000 </p>
                     <ul class="icons-list">
                         <li>
                             <img src="src/img/icono_wc.svg" alt="img-wc">
@@ -71,7 +71,7 @@
             <div class="ad-content">
                 <img src="src/img/anuncio2.jpg" alt="House 2">
                 <div class="ad-info">
-                    <h3>Departamento Moderno</h3>
+                    <h3>Casa con alberca</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                     <p class="price"> $300,000</p>
                    <ul class="icons-list">
