--- a/index.html
+++ b/index.html
@@ -119,5 +119,22 @@
             <button>Ver Todas</button>
         </div>
     </section>
+    <section class="section contact">
+        <div class="contact-info">
+            <h2>Encuentra la casa de tus sueños</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto totam excepturi.</p>
+            <button>
+                Contact Us
+            </button>
+        </div>
+    </section>
+    <section class="section blog">
+        <div class="blog-content">
+            <h2>Our blog</h2>
+        </div>
+        <div class="testimonials">
+            <h2>Testimonials</h2>
+        </div>
+    </section>
 </body>
 </html>
