--- a/index.html
+++ b/index.html
@@ -158,6 +158,12 @@
         </div>
         <div class="testimonials">
             <h2>Testimonials</h2>
+            <div class="testimonals-content">
+                <blockquote>
+                    El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas. 
+                </blockquote>
+                <p> - Luis Duran </p>
+            </div>
         </div>
     </section>
 </body>
