--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="navbar">
                 <a href="#" class="logo">Real<span>State</span></a>
                 <ul class="navbar-links">
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="/about.html">About Us</a></li>
                     <li><a href="#">Ads</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
