add: progress with about page

--- a/about.html
+++ b/about.html
@@ -19,8 +19,24 @@
                     <li><a href="#"><img src="src/img/moon.png" alt=""></a></li>
                 </ul>
             </div>
-            <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
         </div>
     </header>
+    <main>
+        <h1>About Us</h1>
+        <div class="section about about-content">
+            <div class="about-image">
+                <picture>
+                    <!-- <source srcset="src/img/about.webp" type="image/webp"> -->
+                    <source srcset="src/img/about.jpg" type="image/jpeg">
+                    <img loading="lazy" src="src/img/about.jpg" alt="About Us Image">
+                </picture>
+            </div>
+            <div class="about-description">
+                <blockquote>25 year of experience</blockquote>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, esse reiciendis. Magni mollitia voluptatibus numquam excepturi nemo ut cum! Assumenda beatae rem eius inventore aspernatur aut modi id. Porro, et! Praesentium nemo officia sequi quasi, perferendis reprehenderit laudantium totam velit, error nulla ab dolores eius. Saepe sit nesciunt recusandae quam iusto similique!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam harum accusantium distinctio praesentium sint natus, id, neque aliquam explicabo laborum, expedita quasi. Veritatis facilis, eius eos suscipit hic magnam asperiores!</p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
