--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Real State</title>
 </head>
 <body class="dark-mode">
-    <header>
+    <header class="inicio">
         <div class="container header-container">
             <div class="navbar">
                 <a href="#" class="logo">Real<span>State</span></a>
