--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
                 <a href="/" class="logo">Real<span>State</span></a>
                 <ul class="navbar-links">
                     <li><a href="#">About Us</a></li>
-                    <li><a href="#">Ads</a></li>
+                    <li><a href="/ads.html">Ads</a></li>
                     <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
                     <li><a href="#"><img src="src/img/moon.png" alt=""></a></li>
                 </ul>
             </div>
