Add: hover in header, buttons and footer

--- a/ads.html
+++ b/ads.html
@@ -45,7 +45,7 @@
                                 <p>4</p>
                             </li>
                         </ul>
-                        <a href="/ad.html">Ver Más</a>
+                        <a href="/ad.html" class="yellow-button">Ver Más</a>
                     </div>
                 </div>
                 <div class="ad-content">
@@ -68,7 +68,7 @@
                                 <p>4</p>
                             </li>
                         </ul>
-                        <a href="/ad.html">Ver Más</a>
+                        <a href="/ad.html" class="yellow-button">Ver Más</a>
                     </div>
                 </div>
                 <div class="ad-content">
@@ -91,7 +91,7 @@
                                 <p>4</p>
                             </li>
                         </ul>
-                        <a href="/ad.html">Ver Más</a>
+                        <a href="/ad.html" class="yellow-button">Ver Más</a>
                     </div>
                 </div>
                 <div class="ad-content">
@@ -114,7 +114,7 @@
                                 <p>4</p>
                             </li>
                         </ul>
-                        <a href="/ad.html">Ver Más</a>
+                        <a href="/ad.html" class="yellow-button">Ver Más</a>
                     </div>
                 </div>
                 <div class="ad-content">
@@ -137,7 +137,7 @@
                                 <p>4</p>
                             </li>
                         </ul>
-                        <a href="/ad.html">Ver Más</a>
+                        <a href="/ad.html" class="yellow-button">Ver Más</a>
                     </div>
                 </div>
                 <div class="ad-content">
@@ -160,7 +160,7 @@
                                 <p>4</p>
                             </li>
                         </ul>
-                        <a href="/ad.html">Ver Más</a>
+                        <a href="/ad.html" class="yellow-button">Ver Más</a>
                     </div>
                 </div>
             </div>
