--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <p>4</p>
                         </li>
                     </ul>
-                    <a href="/ad.html">Ver Más</a>
+                    <a href="/ad.html" class="yellow-button">Ver Más</a>
                 </div>
             </div>
             <div class="ad-content">
@@ -88,7 +88,7 @@
                             <p>4</p>
                         </li>
                     </ul>
-                    <a href="/ad.html">Ver Más</a>
+                    <a href="/ad.html" class="yellow-button">Ver Más</a>
                 </div>
             </div>
             <div class="ad-content">
@@ -111,19 +111,19 @@
                             <p>4</p>
                         </li>
                     </ul>
-                    <a href="/ad.html">Ver Más</a>
+                    <a href="/ad.html" class="yellow-button">Ver Más</a>
                 </div>
             </div>
         </div>
         <div class="button-container">
-            <a href="#">Ver Todas</a>
+            <a href="#" class="green-button">Ver Todas</a>
         </div>
     </section>
     <section class="section contact">
         <div class="contact-info">
             <h2>Encuentra la casa de tus sueños</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto totam excepturi.</p>
-            <a href="/contact.html">
+            <a href="/contact.html" class="yellow-button">
                 Contact Us
             </a>
         </div>
