add: about page finished

--- a/about.html
+++ b/about.html
@@ -38,5 +38,38 @@
             </div>
         </div>
     </main>
+    <section class="section about">
+        <h1> More About Us </h1>
+        <div class="icons">
+            <div class="icon-content">
+                <img src="src/img/icono1.svg" alt="img_security">
+                <h3 class="title">Segurity</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at est nec nisi facilisis tincidunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid perferendis dignissimos consequatur, voluptatibus repellat ut recusandae.</p>
+            </div>
+            <div class="icon-content">
+                <img src="src/img/icono2.svg" alt="img_price">
+                <h3 class="title">Price</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at est nec nisi facilisis tincidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae cum harum.</p>
+            </div>
+            <div class="icon-content">
+                <img src="src/img/icono3.svg" alt="img_time">
+                <h3 class="title">On time</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at est nec nisi facilisis tincidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nulla quo culpa ea, voluptatem non amet reiciendis incidunt rem similique dolorem nemo.</p>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-content section">
+            <div class="footer-nav">
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="/ads.html">Ads</a></li>
+                    <li><a href="/blog.html">Blog</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <p> All right reserved 2025 ©</p>
+        </div>
+    </footer>
 </body>
 </html>
