add: se agrega dark mode para home

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="src/img/bienes-raices.png" type="image/x-icon">
     <link rel="stylesheet" href="build/css/app.css">
     <title>Real State</title>
 </head>
-<body class="dark-mode">
+<body class="">
     <header class="inicio">
         <div class="container header-container">
             <div class="navbar">
@@ -49,7 +50,7 @@
                 <img src="src/img/anuncio1.jpg" alt="House 1">
                 <div class="ad-info">
                     <h3>Casa de Lujo en el Lago</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p class="ad-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <p class="price"> $500,000 </p>
                     <ul class="icons-list">
                         <li>
@@ -72,7 +73,7 @@
                 <img src="src/img/anuncio2.jpg" alt="House 2">
                 <div class="ad-info">
                     <h3>Casa con alberca</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <p class="ad-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                     <p class="price"> $300,000</p>
                    <ul class="icons-list">
                         <li>
@@ -95,7 +96,7 @@
                 <img src="src/img/anuncio3.jpg" alt="House 3">
                 <div class="ad-info">
                     <h3>Departamento Moderno</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <p class="ad-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                     <p class="price"> $300,000</p>
                     <ul class="icons-list">
                         <li>
@@ -170,7 +171,7 @@
         <div class="footer-content section">
             <div class="footer-nav">
                 <ul>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="/about.html">About Us</a></li>
                     <li><a href="/ads.html">Ads</a></li>
                     <li><a href="/blog.html">Blog</a></li>
                     <li><a href="/contact.html">Contact</a></li>
