--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
             <div class="navbar">
                 <a href="/" class="logo">Real<span>State</span></a>
                 <ul class="navbar-links">
-                    <li><a href="#">About Us</a></li>
+                    <li><li><a href="/about.html">About Us</a></li>
                     <li><a href="/ads.html">Ads</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="/contact.html">Contact</a></li>
@@ -62,7 +62,7 @@
         <div class="footer-content section">
             <div class="footer-nav">
                 <ul>
-                    <li><a href="#">About Us</a></li>
+                    <li><li><a href="/about.html">About Us</a></li>
                     <li><a href="/ads.html">Ads</a></li>
                     <li><a href="/blog.html">Blog</a></li>
                     <li><a href="/contact.html">Contact</a></li>
