--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
         <div class="footer-content section">
             <div class="footer-nav">
                 <ul>
-                    <li><a href="#">About Us</a></li>
+                    <li><li><a href="/about.html">About Us</a></li>
                     <li><a href="/ads.html">Ads</a></li>
                     <li><a href="/blog.html">Blog</a></li>
                     <li><a href="/contact.html">Contact</a></li>
