add: dark mode in progress (blog)

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
                     <li><a href="/ads.html">Ads</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="#"><img src="src/img/moon.png" alt=""></a></li>
+                    <li><a href="#" class="dark-mode-boton"><img src="src/img/moon.png" alt=""></a></li>
                 </ul>
             </div>
         </div>
@@ -71,5 +71,6 @@
             <p> All right reserved 2025 ©</p>
         </div>
     </footer>
+    <script src="build/js/app.js"></script>
 </body>
 </html>
