--- a/ads.html
+++ b/ads.html
@@ -16,7 +16,7 @@
                     <li><a href="/ads.html">Ads</a></li>
                     <li><a href="/blog.html">Blog</a></li>
                     <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="#"><img src="src/img/moon.png" alt=""></a></li>
+                    <li><a href="#" class="dark-mode-boton"><img src="src/img/moon.png" alt=""></a></li>
                 </ul>
             </div>
         </div>
@@ -29,7 +29,7 @@
                     <img src="src/img/anuncio1.jpg" alt="House 1">
                     <div class="ad-info">
                         <h3>Casa de Lujo en el Lago</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="ad-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                         <p class="price"> $500,000 </p>
                         <ul class="icons-list">
                             <li>
@@ -52,7 +52,7 @@
                     <img src="src/img/anuncio2.jpg" alt="House 2">
                     <div class="ad-info">
                         <h3>Casa con alberca</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <p class="ad-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                         <p class="price"> $300,000</p>
                     <ul class="icons-list">
                             <li>
@@ -75,7 +75,7 @@
                     <img src="src/img/anuncio3.jpg" alt="House 3">
                     <div class="ad-info">
                         <h3>Departamento Moderno</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <p class="ad-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                         <p class="price"> $300,000</p>
                         <ul class="icons-list">
                             <li>
@@ -98,7 +98,7 @@
                     <img src="src/img/anuncio4.jpg" alt="House 4">
                     <div class="ad-info">
                         <h3>Departamento Moderno</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <p class="ad-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                         <p class="price"> $300,000</p>
                         <ul class="icons-list">
                             <li>
@@ -121,7 +121,7 @@
                     <img src="src/img/anuncio5.jpg" alt="House 5">
                     <div class="ad-info">
                         <h3>Departamento Moderno</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <p class="ad-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                         <p class="price"> $300,000</p>
                         <ul class="icons-list">
                             <li>
@@ -144,7 +144,7 @@
                     <img src="src/img/anuncio6.jpg" alt="House 6">
                     <div class="ad-info">
                         <h3>Departamento Moderno</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <p class="ad-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                         <p class="price"> $300,000</p>
                         <ul class="icons-list">
                             <li>
@@ -179,5 +179,6 @@
             <p> All right reserved 2025 ©</p>
         </div>
     </footer>
+    <script src="build/js/app.js"></script>
 </body>
 </html>
