--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="build/css/app.css">
     <title>Real State</title>
 </head>
-<body class="">
+<body>
     <header class="inicio">
         <div class="container header-container">
             <div class="navbar">
@@ -17,7 +17,7 @@
                     <li><a href="/ads.html">Ads</a></li>
                     <li><a href="/blog.html">Blog</a></li>
                     <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="#"><img src="src/img/moon.png" alt=""></a></li>
+                    <li><a href="#" class="dark-mode-boton"><img src="src/img/moon.png" alt=""></a></li>
                 </ul>
             </div>
             <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
@@ -180,5 +180,6 @@
             <p> All right reserved 2025 ©</p>
         </div>
     </footer>
+    <script src="build/js/app.js"></script>
 </body>
 </html>
