--- a/entry.html
+++ b/entry.html
@@ -16,7 +16,7 @@
                     <li><a href="/ads.html">Ads</a></li>
                     <li><a href="/blog.html">Blog</a></li>
                     <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="#"><img src="src/img/moon.png" alt=""></a></li>
+                    <li><a href="#" class="dark-mode-boton"><img src="src/img/moon.png" alt=""></a></li>
                 </ul>
             </div>
         </div>
