fix: fix the darkmode in blog and progress with responsive menu

--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
             </div>
         </div>
     </header>
-    <main class="container section container-center">
+    <main class="container section container-center blog">
         <div class="blog-content">
             <h3>Our blog</h3>
             <article>
