--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="container header-container">
             <div class="navbar">
                 <a href="#" class="logo">Real<span>State</span></a>
+                <img class="mobile-icon-menu" src="src/img/barras.svg" alt="barras">
                 <ul class="navbar-links">
                     <li><a href="/about.html">About Us</a></li>
                     <li><a href="/ads.html">Ads</a></li>
